--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -5945,6 +5945,15 @@
     <!-- List of synonyms used in the settings search bar to find the “Voice Access”. [CHAR LIMIT=NONE] -->
     <string name="keywords_voice_access"></string>
 
+    <!-- Fast Pair settings -->
+    <skip />
+
+    <!-- Title in main settings screen for Fast Pair settings [CHAR LIMIT=15] -->
+    <string name="fast_pair_settings">Fast Pair</string>
+
+    <!-- Fast Pair setting summary in settings screen [CHAR LIMIT=50] -->
+    <string name="fast_pair_settings_summary">Nearby detection of Fast Pair bluetooth devices.</string>
+
     <!-- Printing settings -->
     <skip />
 
@@ -8379,6 +8388,9 @@
 
     <!-- List of synonyms for the Bluetooth setting, used to match in settings search [CHAR LIMIT=NONE] -->
     <string name="keywords_bluetooth_settings">connected, device, headphones, headset, speaker, wireless, pair, earbuds, music, media </string>
+
+    <!-- List of synonyms for the Fast Pair setting, used to match in settings search [CHAR LIMIT=NONE] -->
+    <string name="keywords_fast_pair">pair, earbuds, bluetooth</string>
 
     <!-- List of synonyms for the Wallpaper picker setting, used to match in settings search [CHAR LIMIT=NONE] -->
     <string name="keywords_wallpaper">background, theme, grid, customize, personalize</string>
